--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -31,7 +31,7 @@ source:
 
 build:
   number: 0
-  string: 1629798263
+  string: 1630952208
 
   missing_dso_whitelist:
     - /lib64/ld-linux-x86-64.so.2 # [unix]
@@ -76,7 +76,7 @@ requirements:
     - openssl >=1.1.1g
     - patchelf # [unix]
     - pillow # [unix]
-    - python ==3.8
+    - python ==3.9.6
     - zlib
   run:
     - freetype # [unix]
@@ -84,7 +84,7 @@ requirements:
     - libpng # [unix]
     - libstdcxx-ng # [unix]
     - libvorbis # [unix]
-    - python ==3.8
+    - python >=3.9.6,<3.10.0
     - vs2015_runtime # [win]
     - zlib # [unix]
 
