--- a/container/sdk_builder/docker-compose.yml
+++ b/container/sdk_builder/docker-compose.yml
@@ -6,8 +6,6 @@ services:
         ports:
             - "0.0.0.0:8080:8080"
         volumes:
-            - ./jenkins:/var/lib/jenkins:Z
-            - ./jenkins-job-builder.yml:/opt/jenkins-job-builder.yml:Z
-            - ./binstar:/root/.config/binstar:Z
+            - ./jenkins:/root/jenkins:Z
             - ./jenkins_jobs:/root/.config/jenkins_jobs:Z
-
+            - ./binstar:/root/.config/binstar:Z
