--- a/conda/bullet/meta.yaml
+++ b/conda/bullet/meta.yaml
@@ -14,14 +14,10 @@ requirements:
   build:
     - cmake
     - conda ==4.10.3
-
-c_compiler:
-  - gcc # [linux]
-  - vs2019 # [win]
-
-cxx_compiler:
-  - gxx # [linux]
-  - vs2019 # [win]
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
+    - gcc # [linux]
+    - vs2019 # [win]
 
 about:
   home: http://bulletphysics.org
