--- a/container/sdk_builder/Dockerfile
+++ b/container/sdk_builder/Dockerfile
@@ -1,7 +1,7 @@
 # image built from container/sdk_base/Dockerfile
 FROM docker.io/yonnji/sdk:base
 
-RUN apt install -y openjdk-11-jre tini && apt clean
+RUN apt install -y openjdk-11-jre && apt clean
 
 RUN wget -q -O /opt/jenkins.war https://get.jenkins.io/war-stable/2.289.3/jenkins.war
 
