--- a/sdk.yml
+++ b/sdk.yml
@@ -21,6 +21,7 @@ dependencies:
   - qt=5.9.7
   - sphinx
   - pip:
+    - epc
     - httplib2==0.19.1
     - oauth2==1.9.0.post1
     - panda3d-gltf==0.13
