--- a/container/sdk_builder/jenkins_jobs/jobs.yml
+++ b/container/sdk_builder/jenkins_jobs/jobs.yml
@@ -71,6 +71,8 @@
             name: kphys
         - 'LYNX64/{name}':
             name: runtime
+        - 'LYNX64/{name}':
+            name: realsense
 
 - project:
     name: 'WINX64-jobs'
