--- a/container/sdk_base/Dockerfile
+++ b/container/sdk_base/Dockerfile
@@ -9,7 +9,8 @@ RUN \
     apt install -y \
         sudo kmod git subversion wget p7zip-full && \
     apt install -y \
-        build-essential gettext linux-libc-dev libcap2-bin libxi6 uuid-dev && \
+        build-essential gettext linux-libc-dev libusb-1.0-0-dev libcap2-bin \
+        libxi6 uuid-dev && \
     apt install -y \
         mingw-w64 mingw-w64-tools mingw-w64-x86-64-dev \
         g++-mingw-w64 libz-mingw-w64-dev && \
