--- a/conda/realsense/meta.yaml
+++ b/conda/realsense/meta.yaml
@@ -10,12 +10,20 @@ build:
   number: 0
   string: 1631255844
 
+  missing_dso_whitelist:
+    - $RPATH/libc.so.6 # [unix]
+    - $RPATH/libm.so.6 # [unix]
+
 requirements:
   build:
     - cmake
     - conda ==4.10.3
+    - libgcc-ng # [unix]
+    - libstdcxx-ng # [unix]
     - python ==3.9.6
   run:
+    - libgcc-ng # [unix]
+    - libstdcxx-ng # [unix]
     - python >=3.9.6,<3.10.0
 
 about:
