--- a/conda/realsense/meta.yaml
+++ b/conda/realsense/meta.yaml
@@ -13,6 +13,9 @@ build:
   missing_dso_whitelist:
     - $RPATH/libc.so.6 # [unix]
     - $RPATH/libm.so.6 # [unix]
+    - $RPATH/libpthread.so.0 # [unix]
+    - $RPATH/libusb-1.0.so.0 # [unix]
+    - /lib64/ld-linux-x86-64.so.2 # [unix]
 
 requirements:
   build:
