--- a/container/sdk_base/Dockerfile
+++ b/container/sdk_base/Dockerfile
@@ -7,19 +7,19 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN \
     apt update -y && \
     apt install -y \
-        sudo kmod git subversion wget p7zip-full && \
+        sudo kmod git subversion wget imagemagick openssh-server p7zip-full && \
     apt install -y \
-        build-essential gettext linux-libc-dev libusb-1.0-0-dev libcap2-bin \
+        build-essential cxxtest gettext linux-libc-dev libusb-1.0-0-dev libcap2-bin \
         libxi6 uuid-dev && \
     apt install -y \
         mingw-w64 mingw-w64-tools mingw-w64-x86-64-dev \
         g++-mingw-w64 libz-mingw-w64-dev && \
     apt install -y \
         mesa-common-dev mesa-utils libgl1-mesa-dev libglu1-mesa-dev \
-        libglew-dev libxxf86vm-dev cxxtest \
-        libopenal-dev && \
+        libglew-dev libxxf86vm-dev libxext-dev libopenal-dev && \
     apt clean && \
     ln -sf /usr/share/zoneinfo/UTC /etc/localtime && \
+    ln -sf /home /var/home && \
     echo UTC > /etc/timezone
 
 RUN \
