--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -17,6 +17,7 @@ source:
       - rp_light.patch
       - udp.patch
       - vs2022.patch # [win]
+      - rgba.patch # [unix]
 
   # - url: https://www.panda3d.org/download/panda3d-1.10.8/panda3d-1.10.8-tools-win32.zip # [win32]
   #   md5: 5841b1527c20a2a697784710e60fcfdf # [win32]
@@ -32,7 +33,7 @@ source:
 
 build:
   number: 0
-  string: 1631255844
+  string: 1634111001
 
   missing_dso_whitelist:
     - /lib64/ld-linux-x86-64.so.2 # [unix]
