--- a/container/sdk_base/Dockerfile
+++ b/container/sdk_base/Dockerfile
@@ -16,7 +16,7 @@ RUN \
         g++-mingw-w64 libz-mingw-w64-dev && \
     apt install -y \
         mesa-common-dev mesa-utils libgl1-mesa-dev libglu1-mesa-dev \
-        libglew-dev libxxf86vm-dev libxext-dev libopenal-dev && \
+        libglew-dev libxxf86vm-dev libxrender-dev libxext-dev libopenal-dev && \
     apt clean && \
     ln -sf /usr/share/zoneinfo/UTC /etc/localtime && \
     ln -sf /home /var/home && \
