--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -42,6 +42,7 @@ build:
     - $RPATH/libCgGL.so # [unix]
     - $RPATH/libGL.so.1 # [unix]
     - $RPATH/libX11.so.6 # [unix]
+    - $RPATH/libXrender.so.1 # [unix]
     - $RPATH/libc.so.6 # [unix]
     - $RPATH/libdl.so.2 # [unix]
     - $RPATH/libm.so.6 # [unix]
