--- a/container/sdk_base/docker-compose.yml
+++ b/container/sdk_base/docker-compose.yml
@@ -4,5 +4,7 @@ services:
     image: docker.io/yonnji/sdk:base
     command: bash --init-file /etc/profile
     volumes:
+      - /home/${USERNAME}/.conda:/home/${USERNAME}/.conda:Z
       - /home/${USERNAME}/Dev:/home/${USERNAME}/Dev:Z
-      # - /home/${USERNAME}/.conda:/home/${USERNAME}/.conda:Z
+    environment:
+      - HOME=/home/${USERNAME}
