--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -8,6 +8,7 @@ source:
     folder: .
     patches:
       - bullet3.patch
+      - bullet_char.patch
       - icon.patch # [unix]
       - libs.patch
       - nopy.patch # [win]
@@ -20,7 +21,7 @@ source:
 
 build:
   number: 0
-  string: 1643287170
+  string: 1643292223
 
   missing_dso_whitelist:
     - /lib64/ld-linux-x86-64.so.2 # [unix]
