--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -4,6 +4,7 @@ package:
 
 source:
   - git_url: https://github.com/panda3d/panda3d.git
+    git_branch: master
     git_rev: b401884f1c1b25dde079139666f03a01427e8d05
     folder: .
     patches:
