--- a/container/sdk_base/docker-compose.yml
+++ b/container/sdk_base/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3"
 services:
   sdk:
     image: docker.io/yonnji/sdk:base
-    command: bash --init-file /etc/profile
+    # command: bash --init-file /etc/profile
+    command: bash --init-file /opt/sdk.sh
     volumes:
       - /home/${USERNAME}/.conda:/home/${USERNAME}/.conda:Z
       - /home/${USERNAME}/Dev:/home/${USERNAME}/Dev:Z
