--- a/container/sdk_builder/Dockerfile
+++ b/container/sdk_builder/Dockerfile
@@ -2,9 +2,11 @@
 FROM docker.io/yonnji/sdk:base
 
 RUN apt install -y openjdk-11-jre && apt clean
-
 RUN wget -q -O /opt/jenkins.war https://get.jenkins.io/war/2.313/jenkins.war
-
 COPY ./run-jenkins /usr/local/bin/run-jenkins
 
-RUN /opt/miniconda3/bin/pip install jenkins-job-builder && rm -Rf /root/.cache
+COPY ./builder.yml /opt/builder.yml
+RUN \
+    /opt/miniconda3/bin/conda env create -f=/opt/builder.yml && \
+    /opt/miniconda3/bin/conda clean -a -y && \
+    rm -f /opt/builder.yml
