--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -58,6 +58,7 @@ requirements:
     - python ==3.10.0
     - six
   run:
+    - bzip2 # [unix]
     - freetype # [unix]
     - harfbuzz # [unix]
     - libffi
@@ -65,6 +66,7 @@ requirements:
     - libogg # [unix]
     - libpng
     - libstdcxx-ng # [unix]
+    - libuuid # [unix]
     - libvorbis # [unix]
     - openssl >=1.1.1g
     - panda3d
