--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -62,7 +62,7 @@ requirements:
   run:
     - libgcc-ng # [unix]
     - libstdcxx-ng # [unix]
-    - numpy
+    - numpy >=1.22.3
     - python >=3.10.0,<3.11.0
 
 about:
