--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -42,6 +42,7 @@ build:
     - $RPATH/libGL.so.1 # [unix]
     - $RPATH/libc.so.6 # [unix]
     - $RPATH/libdl.so.2 # [unix]
+    - $RPATH/libgmp-10.dll # [win]
     - $RPATH/libm.so.6 # [unix]
     - $RPATH/libpthread.so.0 # [unix]
     - $RPATH/libsndfile-1.dll # [win]
