--- a/conda/panda3d-kphys/meta.yaml
+++ b/conda/panda3d-kphys/meta.yaml
@@ -1,13 +1,14 @@
 package:
-  name: kitsunetsuki-phys
-  version: "0.2"
+  name: panda3d-kphys
+  version: "0.3.0"
 
 source:
-  path: .
+  git_rev: 0.3.0
+  git_url: https://github.com/kitsune-ONE-team/panda3d-kphys.git
 
 build:
   number: 0
-  string: 1655223947
+  string: 1658580684
 
   missing_dso_whitelist:
     - $RPATH/libc.so.6 # [unix]
@@ -32,5 +33,5 @@ requirements:
     - python >=3.10.0,<3.11.0
 
 about:
-  home: https://github.com/kitsune-ONE-team/KITSUNETSUKI-SDK
-  license: BSD
+  home: https://github.com/kitsune-ONE-team/panda3d-kphys
+  license: MIT
