--- a/container/sdk_main/sdk.yml
+++ b/container/sdk_main/sdk.yml
@@ -10,8 +10,8 @@ dependencies:
   - cmake==3.19.6
   - conda==4.13.0
   - jsonschema==3.2.0
-  - kitsunetsuki-phys==0.2
   - panda3d==1.10.11
+  - panda3d-kphys==0.3.0
   - pip
   - pyqt==5.9.2
   - python-blender==3.2
