--- a/container/sdk_main/Dockerfile
+++ b/container/sdk_main/Dockerfile
@@ -1,6 +1,8 @@
 # image built from container/sdk_base/Dockerfile
 FROM docker.io/yonnji/sdk:base
 
+RUN apt install -y cloc && apt clean
+
 COPY ./sdk.sh /etc/profile.d/sdk.sh
 COPY ./sdk.yml /opt/sdk.yml
 RUN \
