--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -30,6 +30,7 @@ build:
     - $RPATH/libCg.so # [unix]
     - $RPATH/libCgGL.so # [unix]
     - $RPATH/libGL.so.1 # [unix]
+    - $RPATH/libGLX.so.0 # [unix]
     - $RPATH/libX11.so.6 # [unix]
     - $RPATH/libXrender.so.1 # [unix]
     - $RPATH/libc.so.6 # [unix]
