--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -30,6 +30,7 @@ build:
     - $RPATH/libCg.so # [unix]
     - $RPATH/libCgGL.so # [unix]
     - $RPATH/libGL.so.1 # [unix]
+    - $RPATH/libGLESv1_CM.so.1 # [unix]
     - $RPATH/libGLX.so.0 # [unix]
     - $RPATH/libX11.so.6 # [unix]
     - $RPATH/libXrender.so.1 # [unix]
@@ -59,10 +60,12 @@ requirements:
     - fontconfig # [unix]
     - freetype # [unix]
     - harfbuzz # [unix]
+    - jpeg # [unix]
     - libgcc-ng # [unix]
     - libogg # [unix]
     - libpng
     - libstdcxx-ng # [unix]
+    - libtiff # [unix]
     - libvorbis # [unix]
     - m2-gcc-libs # [win]
     - m2-p7zip # [win]
@@ -76,9 +79,11 @@ requirements:
   run:
     - freetype # [unix]
     - harfbuzz # [unix]
+    - jpeg # [unix]
     - libgcc-ng # [unix]
     - libpng # [unix]
     - libstdcxx-ng # [unix]
+    - libtiff # [unix]
     - libvorbis # [unix]
     - python >=3.10.0,<3.11.0
     - vs2015_runtime # [win]
