--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -31,7 +31,9 @@ build:
     - $RPATH/libCgGL.so # [unix]
     - $RPATH/libGL.so.1 # [unix]
     - $RPATH/libGLESv1_CM.so.1 # [unix]
+    - $RPATH/libGLESv2.so.2 # [unix]
     - $RPATH/libGLX.so.0 # [unix]
+    - $RPATH/libOpenGL.so.0 # [unix]
     - $RPATH/libX11.so.6 # [unix]
     - $RPATH/libXrender.so.1 # [unix]
     - $RPATH/libc.so.6 # [unix]
