--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -42,6 +42,7 @@ build:
     - $RPATH/libm.so.6 # [unix]
     - $RPATH/libopenal.so.1 # [unix]
     - $RPATH/libpthread.so.0 # [unix]
+    - $RPATH/python39.dll # [win]
     - C:\Windows\System32\GLU32.dll # [win]
     - C:\Windows\System32\IPHLPAPI.DLL # [win]
     - C:\Windows\System32\MSVCP140.dll # [win]
