--- a/conda/panda3d-kphys/meta.yaml
+++ b/conda/panda3d-kphys/meta.yaml
@@ -8,7 +8,7 @@ source:
 
 build:
   number: 0
-  string: 1661929051
+  string: 1667748744
 
   missing_dso_whitelist:
     - $RPATH/libc.so.6 # [unix]
@@ -20,18 +20,18 @@ build:
 
 requirements:
   build:
-    - bullet ==3.17
-    - cmake
-    - conda ==4.13.0
+    - bullet==3.17
+    - cmake==3.22.1
+    - conda==4.13.0
     - libgcc-ng # [unix]
     - libstdcxx-ng # [unix]
     - panda3d
-    - python ==3.10.0
+    - python==3.10.0
   run:
     - libgcc-ng # [unix]
     - libstdcxx-ng # [unix]
     - panda3d
-    - python >=3.10.0,<3.11.0
+    - python>=3.10.0,<3.11.0
 
 about:
   home: https://github.com/kitsune-ONE-team/panda3d-kphys
