--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -18,6 +18,7 @@ build:
     - $RPATH/libCg.so # [unix]
     - $RPATH/libCgGL.so # [unix]
     - $RPATH/libGL.so.1 # [unix]
+    - $RPATH/libGLX.so.0 # [unix]
     - $RPATH/libX11.so.6 # [unix]
     - $RPATH/libXrender.so.1 # [unix]
     - $RPATH/libasound.so.2 # [unix]
@@ -62,13 +63,16 @@ requirements:
     - bzip2
     - freetype # [unix]
     - harfbuzz # [unix]
+    - jpeg # [unix]
     - libffi
     - libgcc-ng # [unix]
     - libogg # [unix]
     - libpng
     - libstdcxx-ng # [unix]
+    - libtiff # [unix]
     - libuuid # [unix]
     - libvorbis # [unix]
+    - openssl
     - panda3d
     - python >=3.10.0,<3.11.0
     - pywin32 # [win]
