--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -17,8 +17,12 @@ build:
     - $RPATH/ld-linux-x86-64.so.2 # [unix]
     - $RPATH/libCg.so # [unix]
     - $RPATH/libCgGL.so # [unix]
+    - $RPATH/libEGL.so.1 # [unix]
     - $RPATH/libGL.so.1 # [unix]
+    - $RPATH/libGLESv1_CM.so.1 # [unix]
+    - $RPATH/libGLESv2.so.2 # [unix]
     - $RPATH/libGLX.so.0 # [unix]
+    - $RPATH/libOpenGL.so.0 # [unix]
     - $RPATH/libX11.so.6 # [unix]
     - $RPATH/libXrender.so.1 # [unix]
     - $RPATH/libasound.so.2 # [unix]
