--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /conda/panda3d/test.txt
 /conda/panda3d/test.zip
 /container/sdk_base/conda/envs/*
+/container/sdk_base/itch/*
 /container/sdk_builder/binstar/*
 /container/sdk_builder/jenkins/*
 /container/sdk_builder/jenkins_jobs/jenkins_jobs.ini
