--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -24,6 +24,7 @@ source:
     folder: blender_extras/source/tools
 
   - svn_url: https://svn.blender.org/svnroot/bf-blender/trunk/lib/win64_vc15 # [win64]
+    svn_rev: blender-3.4-release
     folder: lib/win64_vc15 # [win64]
 
   - svn_url: https://svn.blender.org/svnroot/bf-blender/trunk/lib/linux_centos7_x86_64 # [unix]
