--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -38,6 +38,7 @@ build:
     - $RPATH/avcodec-59.dll # [win]
     - $RPATH/avformat-59.dll # [win]
     - $RPATH/avutil-57.dll # [win]
+    - $RPATH/epoxy-0.dll # [win]
     - $RPATH/ld-linux-x86-64.so.2 # [unix]
     - $RPATH/libGL.so.1 # [unix]
     - $RPATH/libc.so.6 # [unix]
