--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -62,7 +62,8 @@ requirements:
     - idna
     - jsonschema==3.2.0
     - panda3d==1.11.0
-    - panda3d-kphys==0.4.8
+    - panda3d-kphys==0.4.13
+    - panda3d-krender==0.0.9
     - pyrsistent
     - pytest-runner
     - python==3.10.0
