--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -64,6 +64,7 @@ requirements:
     - panda3d==1.11.0
     - panda3d-kphys==0.4.13
     - panda3d-krender==0.0.9
+    - pyparsing
     - pyrsistent
     - pytest-runner
     - python==3.10.0
