--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -1,29 +1,29 @@
 package:
   name: python-blender
-  version: "3.4.0"
+  version: "3.6.0"
 
 source:
-  - git_url: https://git.blender.org/blender.git
-    git_rev: v3.4.0
+  - git_url: https://projects.blender.org/blender.git
+    git_rev: v3.6.0
     folder: blender
 
-  - git_url: https://git.blender.org/blender-addons.git
-    git_rev: v3.4.0
+  - git_url: https://projects.blender.org/blender-addons.git
+    git_rev: v3.6.0
     folder: blender_extras/release/scripts/addons
 
-  - git_url: https://git.blender.org/blender-addons-contrib.git
-    git_rev: v3.4.0
+  - git_url: https://projects.blender.org/blender-addons-contrib.git
+    git_rev: v3.6.0
     folder: blender_extras/release/scripts/addons_contrib
 
-  - git_url: https://git.blender.org/blender-translations.git
-    git_rev: v3.4.0
+  - git_url: https://projects.blender.org/blender-translations.git
+    git_rev: v3.6.0
     folder: blender_extras/release/datafiles/locale
 
-  - git_url: https://git.blender.org/blender-dev-tools.git
-    git_rev: v3.4.0
+  - git_url: https://projects.blender.org/blender-dev-tools.git
+    git_rev: v3.6.0
     folder: blender_extras/source/tools
 
-  - svn_url: https://svn.blender.org/svnroot/bf-blender/tags/blender-3.4-release/lib/win64_vc15 # [win64]
+  - svn_url: https://svn.blender.org/svnroot/bf-blender/tags/blender-3.6-release/lib/win64_vc15 # [win64]
     folder: lib/win64_vc15 # [win64]
 
   - svn_url: https://svn.blender.org/svnroot/bf-blender/trunk/lib/linux_centos7_x86_64 # [unix]
@@ -31,7 +31,7 @@ source:
 
 build:
   number: 0
-  string: 1674947004
+  string: 1688731267
 
   missing_dso_whitelist:
     - $RPATH/api-ms-win-core-path-l1-1-0.dll # [win]
