--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -3,23 +3,23 @@ package:
   version: "3.6.0"
 
 source:
-  - git_url: https://projects.blender.org/blender.git
+  - git_url: https://projects.blender.org/blender/blender.git
     git_rev: v3.6.0
     folder: blender
 
-  - git_url: https://projects.blender.org/blender-addons.git
+  - git_url: https://projects.blender.org/blender/blender-addons.git
     git_rev: v3.6.0
     folder: blender_extras/release/scripts/addons
 
-  - git_url: https://projects.blender.org/blender-addons-contrib.git
+  - git_url: https://projects.blender.org/blender/blender-addons-contrib.git
     git_rev: v3.6.0
     folder: blender_extras/release/scripts/addons_contrib
 
-  - git_url: https://projects.blender.org/blender-translations.git
+  - git_url: https://projects.blender.org/blender/blender-translations.git
     git_rev: v3.6.0
     folder: blender_extras/release/datafiles/locale
 
-  - git_url: https://projects.blender.org/blender-dev-tools.git
+  - git_url: https://projects.blender.org/blender/blender-dev-tools.git
     git_rev: v3.6.0
     folder: blender_extras/source/tools
 
