--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -9,11 +9,14 @@ source:
 
   - git_url: https://projects.blender.org/blender/blender-addons.git
     git_rev: v3.6.0
-    folder: scripts/addons
+    folder: blender/scripts/addons
 
   - git_url: https://projects.blender.org/blender/blender-addons-contrib.git
     git_rev: v3.6.0
-    folder: scripts/addons_contrib
+    folder: blender/scripts/addons_contrib
+
+  - svn_url: https://svn.blender.org/svnroot/bf-blender/tags/blender-3.6-release/lib/assets
+    folder: lib/assets
 
   - svn_url: https://svn.blender.org/svnroot/bf-blender/tags/blender-3.6-release/lib/win64_vc15 # [win64]
     folder: lib/win64_vc15 # [win64]
