--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,5 +1,4 @@
-# ubuntu 20.04 LTS (focal)
-FROM docker.io/library/ubuntu:20.04
+FROM docker.io/library/ubuntu:22.04
 
 # skips timezone settings
 ENV DEBIAN_FRONTEND=noninteractive
@@ -7,7 +6,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN \
     apt update -y && \
     apt install -y \
-        sudo kmod git subversion wget imagemagick openssh-server p7zip-full && \
+        sudo kmod git git-lfs subversion wget imagemagick openssh-server p7zip-full && \
     apt install -y \
         build-essential cxxtest gettext linux-libc-dev libusb-1.0-0-dev libcap2-bin \
         libxi6 uuid-dev && \
@@ -23,13 +22,13 @@ RUN \
     echo UTC > /etc/timezone && \
     ln -sf /home /var/home
 
-RUN wget -q -O /opt/jenkins.war https://get.jenkins.io/war-stable/2.346.2/jenkins.war
+RUN wget -q -O /opt/jenkins.war https://get.jenkins.io/war/2.413/jenkins.war
 COPY ./run-jenkins /usr/local/bin/run-jenkins
 COPY ./builder.yml /opt/builder.yml
 
 RUN \
     wget -q -O /opt/miniconda3.sh \
-        https://repo.anaconda.com/miniconda/Miniconda3-py38_4.10.3-Linux-x86_64.sh && \
+        https://repo.anaconda.com/miniconda/Miniconda3-py310_23.3.1-0-Linux-x86_64.sh && \
     chmod +x /opt/miniconda3.sh && \
     /opt/miniconda3.sh -b -p /opt/miniconda3 && \
     ln -sf /opt/miniconda3/etc/profile.d/conda.sh /etc/profile.d/conda.sh && \
