--- a/conda/realsense/meta.yaml
+++ b/conda/realsense/meta.yaml
@@ -19,11 +19,11 @@ build:
 
 requirements:
   build:
-    - cmake
-    - conda ==4.13.0
+    - cmake==3.22.1
+    - conda==23.3.1
     - libgcc-ng # [unix]
     - libstdcxx-ng # [unix]
-    - python ==3.10.0
+    - python==3.10.0
   run:
     - libgcc-ng # [unix]
     - libstdcxx-ng # [unix]
