--- a/conda/sdl/meta.yaml
+++ b/conda/sdl/meta.yaml
@@ -20,8 +20,8 @@ build:
 
 requirements:
   build:
-    - cmake
-    - conda ==4.13.0
+    - cmake==3.22.1
+    - conda==23.3.1
 
 about:
   home: http://libsdl.org
