--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -29,32 +29,42 @@ build:
   string: 1688731267
 
   missing_dso_whitelist:
-    - $RPATH/api-ms-win-core-path-l1-1-0.dll # [win]
-    - $RPATH/avcodec-59.dll # [win]
-    - $RPATH/avdevice-59.dll # [win]
-    - $RPATH/avformat-59.dll # [win]
-    - $RPATH/avutil-57.dll # [win]
-    - $RPATH/epoxy-0.dll # [win]
-    - $RPATH/ld-linux-x86-64.so.2 # [unix]
-    - $RPATH/libGL.so.1 # [unix]
-    - $RPATH/libc.so.6 # [unix]
-    - $RPATH/libdl.so.2 # [unix]
-    - $RPATH/libgmp-10.dll # [win]
-    - $RPATH/libgmpxx.dll # [win]
-    - $RPATH/libm.so.6 # [unix]
-    - $RPATH/libpthread.so.0 # [unix]
-    - $RPATH/libsndfile-1.dll # [win]
-    - $RPATH/swresample-4.dll # [win]
-    - $RPATH/swscale-6.dll # [win]
-    - $RPATH/tbbmalloc.dll # [win]
-    - /lib64/ld-linux-x86-64.so.2 # [unix]
-    - C:\Windows\System32\AVIFIL32.dll # [win]
-    - C:\Windows\System32\MSVCP140.dll # [win]
-    - C:\Windows\System32\OPENGL32.dll # [win]
-    - C:\Windows\System32\SHFOLDER.dll # [win]
-    - C:\Windows\System32\SHLWAPI.dll # [win]
-    - C:\Windows\System32\VCRUNTIME140.dll # [win]
-    - C:\Windows\System32\VCRUNTIME140_1.dll # [win]
+    - $RPATH/api-ms-win-core-path-l1-1-0.dll
+    - $RPATH/avcodec-59.dll
+    - $RPATH/avdevice-59.dll
+    - $RPATH/avformat-59.dll
+    - $RPATH/avutil-57.dll
+    - $RPATH/epoxy-0.dll
+    - $RPATH/ld-linux-x86-64.so.2
+    - $RPATH/libGL.so.1
+    - $RPATH/libGLU.so.1
+    - $RPATH/libGLX.so.0
+    - $RPATH/libICE.so.6
+    - $RPATH/libOpenGL.so.0
+    - $RPATH/libSM.so.6
+    - $RPATH/libX11.so.6
+    - $RPATH/libXext.so.6
+    - $RPATH/libXt.so.6
+    - $RPATH/libc.so.6
+    - $RPATH/libdl.so.2
+    - $RPATH/libgmp-10.dll
+    - $RPATH/libgmpxx.dll
+    - $RPATH/libm.so.6
+    - $RPATH/libpthread.so.0
+    - $RPATH/librt.so.1
+    - $RPATH/libsndfile-1.dll
+    - $RPATH/libutil.so.1
+    - $RPATH/swresample-4.dll
+    - $RPATH/swscale-6.dll
+    - $RPATH/tbbmalloc.dll
+    - /lib64/ld-linux-x86-64.so.2
+    - C:\Windows\System32\AVIFIL32.dll
+    - C:\Windows\System32\MSVCP140.dll
+    - C:\Windows\System32\OPENGL32.dll
+    - C:\Windows\System32\SHFOLDER.dll
+    - C:\Windows\System32\SHLWAPI.dll
+    - C:\Windows\System32\VCRUNTIME140.dll
+    - C:\Windows\System32\VCRUNTIME140_1.dll
 
 requirements:
   build:
