--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -10,51 +10,51 @@ build:
   string: 1688734465
 
   missing_dso_whitelist:
-    - $RPATH/D3DCOMPILER_43.dll # [win]
-    - $RPATH/D3DCOMPILER_43.dll # [win]
-    - $RPATH/api-ms-win-core-path-l1-1-0.dll # [win]
-    - $RPATH/api-ms-win-core-winrt-error-l1-1-0.dll # [win]
-    - $RPATH/api-ms-win-core-winrt-l1-1-0.dll # [win]
-    - $RPATH/api-ms-win-core-winrt-string-l1-1-0.dll # [win]
-    - $RPATH/d3dx10_43.dll # [win]
-    - $RPATH/d3dx11_43.dll # [win]
-    - $RPATH/ld-linux-x86-64.so.2 # [unix]
-    - $RPATH/libCg.so # [unix]
-    - $RPATH/libCgGL.so # [unix]
-    - $RPATH/libEGL.so.1 # [unix]
-    - $RPATH/libGL.so.1 # [unix]
-    - $RPATH/libGLESv1_CM.so.1 # [unix]
-    - $RPATH/libGLESv2.so.2 # [unix]
-    - $RPATH/libGLX.so.0 # [unix]
-    - $RPATH/libOpenGL.so.0 # [unix]
-    - $RPATH/libX11.so.6 # [unix]
-    - $RPATH/libXrender.so.1 # [unix]
-    - $RPATH/libasound.so.2 # [unix]
-    - $RPATH/libbsd.so.0 # [unix]
-    - $RPATH/libc.so.6 # [unix]
-    - $RPATH/libdl.so.2 # [unix]
-    - $RPATH/libffi-7.dll # [win]
-    - $RPATH/libm.so.6 # [unix]
-    - $RPATH/libopenal.so.1 # [unix]
-    - $RPATH/libpthread.so.0 # [unix]
-    - $RPATH/librt.so.1 # [unix]
-    - $RPATH/libsndio.so.7.0 # [unix]
-    - $RPATH/libutil.so.1 # [unix]
-    - $RPATH/pgort140.DLL # [win]
-    - /lib64/ld-linux-x86-64.so.2 # [unix]
-    - C:\Windows\System32\GLU32.dll # [win]
-    - C:\Windows\System32\IPHLPAPI.DLL # [win]
-    - C:\Windows\System32\MSVCP140.dll # [win]
-    - C:\Windows\System32\OPENGL32.dll # [win]
-    - C:\Windows\System32\SETUPAPI.dll # [win]
-    - C:\Windows\System32\SHLWAPI.dll # [win]
-    - C:\Windows\System32\VCRUNTIME140.dll # [win]
-    - C:\Windows\System32\VCRUNTIME140_1.dll # [win]
-    - C:\Windows\System32\VERSION.dll # [win]
-    - C:\Windows\System32\WINMM.dll # [win]
-    - C:\Windows\System32\WSOCK32.dll # [win]
-    - Library/bin/MSVCP140.dll # [win]
-    - Library/bin/VCRUNTIME140.dll # [win]
+    - $RPATH/D3DCOMPILER_43.dll
+    - $RPATH/D3DCOMPILER_43.dll
+    - $RPATH/api-ms-win-core-path-l1-1-0.dll
+    - $RPATH/api-ms-win-core-winrt-error-l1-1-0.dll
+    - $RPATH/api-ms-win-core-winrt-l1-1-0.dll
+    - $RPATH/api-ms-win-core-winrt-string-l1-1-0.dll
+    - $RPATH/d3dx10_43.dll
+    - $RPATH/d3dx11_43.dll
+    - $RPATH/ld-linux-x86-64.so.2
+    - $RPATH/libCg.so
+    - $RPATH/libCgGL.so
+    - $RPATH/libEGL.so.1
+    - $RPATH/libGL.so.1
+    - $RPATH/libGLESv1_CM.so.1
+    - $RPATH/libGLESv2.so.2
+    - $RPATH/libGLX.so.0
+    - $RPATH/libOpenGL.so.0
+    - $RPATH/libX11.so.6
+    - $RPATH/libXrender.so.1
+    - $RPATH/libasound.so.2
+    - $RPATH/libbsd.so.0
+    - $RPATH/libc.so.6
+    - $RPATH/libdl.so.2
+    - $RPATH/libffi-7.dll
+    - $RPATH/libm.so.6
+    - $RPATH/libopenal.so.1
+    - $RPATH/libpthread.so.0
+    - $RPATH/librt.so.1
+    - $RPATH/libsndio.so.7.0
+    - $RPATH/libutil.so.1
+    - $RPATH/pgort140.DLL
+    - /lib64/ld-linux-x86-64.so.2
+    - C:\Windows\System32\GLU32.dll
+    - C:\Windows\System32\IPHLPAPI.DLL
+    - C:\Windows\System32\MSVCP140.dll
+    - C:\Windows\System32\OPENGL32.dll
+    - C:\Windows\System32\SETUPAPI.dll
+    - C:\Windows\System32\SHLWAPI.dll
+    - C:\Windows\System32\VCRUNTIME140.dll
+    - C:\Windows\System32\VCRUNTIME140_1.dll
+    - C:\Windows\System32\VERSION.dll
+    - C:\Windows\System32\WINMM.dll
+    - C:\Windows\System32\WSOCK32.dll
+    - Library/bin/MSVCP140.dll
+    - Library/bin/VCRUNTIME140.dll
 
 requirements:
   build:
