--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -16,6 +16,7 @@ RUN \
     apt install -y \
         mesa-common-dev mesa-utils libgl1-mesa-dev libglu1-mesa-dev \
         libglew-dev libxxf86vm-dev libxrender-dev libxext-dev libopenal-dev && \
+    apt install -y libavcodec-dev libxvidcore-dev && \
     apt install -y openjdk-11-jre && \
     apt clean && \
     ln -sf /usr/share/zoneinfo/UTC /etc/localtime && \
