--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -25,37 +25,39 @@ build:
   string: 1688804274
 
   missing_dso_whitelist:
-    - $RPATH/D3DCOMPILER_43.dll # [win]
-    - $RPATH/d3dx10_43.dll # [win]
-    - $RPATH/d3dx11_43.dll # [win]
-    - $RPATH/ld-linux-x86-64.so.2 # [unix]
-    - $RPATH/libCg.so # [unix]
-    - $RPATH/libCgGL.so # [unix]
-    - $RPATH/libEGL.so.1 # [unix]
-    - $RPATH/libGL.so.1 # [unix]
-    - $RPATH/libGLESv1_CM.so.1 # [unix]
-    - $RPATH/libGLESv2.so.2 # [unix]
-    - $RPATH/libGLX.so.0 # [unix]
-    - $RPATH/libOpenGL.so.0 # [unix]
-    - $RPATH/libX11.so.6 # [unix]
-    - $RPATH/libXrender.so.1 # [unix]
-    - $RPATH/libc.so.6 # [unix]
-    - $RPATH/libdl.so.2 # [unix]
-    - $RPATH/libm.so.6 # [unix]
-    - $RPATH/libopenal.so.1 # [unix]
-    - $RPATH/libpthread.so.0 # [unix]
-    - /lib64/ld-linux-x86-64.so.2 # [unix]
-    - C:\Windows\System32\GLU32.dll # [win]
-    - C:\Windows\System32\IPHLPAPI.DLL # [win]
-    - C:\Windows\System32\MSVCP140.dll # [win]
-    - C:\Windows\System32\OPENGL32.dll # [win]
-    - C:\Windows\System32\SETUPAPI.dll # [win]
-    - C:\Windows\System32\VCRUNTIME140.dll # [win]
-    - C:\Windows\System32\VCRUNTIME140_1.dll # [win]
-    - C:\Windows\System32\WINMM.dll # [win]
-    - C:\Windows\System32\WSOCK32.dll # [win]
-    - Library\bin\MSVCP140.dll # [win]
-    - Library\bin\VCRUNTIME140.dll # [win]
+    - $RPATH/D3DCOMPILER_43.dll
+    - $RPATH/d3dx10_43.dll
+    - $RPATH/d3dx11_43.dll
+    - $RPATH/ld-linux-x86-64.so.2
+    - $RPATH/libCg.so
+    - $RPATH/libCgGL.so
+    - $RPATH/libEGL.so.1
+    - $RPATH/libGL.so.1
+    - $RPATH/libGLESv1_CM.so.1
+    - $RPATH/libGLESv2.so.2
+    - $RPATH/libGLX.so.0
+    - $RPATH/libOpenGL.so.0
+    - $RPATH/libX11.so.6
+    - $RPATH/libXrender.so.1
+    - $RPATH/libc.so.6
+    - $RPATH/libdl.so.2
+    - $RPATH/libm.so.6
+    - $RPATH/libopenal.so.1
+    - $RPATH/libpthread.so.0
+    - /lib64/ld-linux-x86-64.so.2
+    - C:\Windows\System32\GLU32.dll
+    - C:\Windows\System32\IPHLPAPI.DLL
+    - C:\Windows\System32\MSVCP140.dll
+    - C:\Windows\System32\OPENGL32.dll
+    - C:\Windows\System32\SETUPAPI.dll
+    - C:\Windows\System32\VCRUNTIME140.dll
+    - C:\Windows\System32\VCRUNTIME140_1.dll
+    - C:\Windows\System32\WINMM.dll
+    - C:\Windows\System32\WSOCK32.dll
+    - Library\bin\MSVCP140.dll
+    - Library\bin\VCRUNTIME140.dll
+    - lib/libgcc_s.so.1
+    - lib/libstdc++.so.6
 
 requirements:
   build:
